chore: Attempt to deploy

--- a/package.json
+++ b/package.json
@@ -23,13 +23,23 @@
     "vercel-build": "NODE_ENV=production next build"
   },
   "dependencies": {
+    "@radix-ui/number": "1.0.1",
+    "@radix-ui/primitive": "1.0.1",
+    "@radix-ui/react-collection": "1.0.3",
+    "@radix-ui/react-compose-refs": "1.0.1",
+    "@radix-ui/react-context": "1.0.1",
     "@radix-ui/react-dialog": "1.1.10",
+    "@radix-ui/react-direction": "1.0.1",
     "@radix-ui/react-dropdown-menu": "2.1.11",
+    "@radix-ui/react-primitive": "1.0.3",
     "@radix-ui/react-progress": "1.1.4",
     "@radix-ui/react-scroll-area": "1.2.5",
     "@radix-ui/react-slider": "1.1.2",
     "@radix-ui/react-slot": "1.2.0",
     "@radix-ui/react-toast": "1.2.10",
+    "@radix-ui/react-use-controllable-state": "1.0.1",
+    "@radix-ui/react-use-layout-effect": "1.0.1",
+    "@radix-ui/react-use-previous": "1.0.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
@@ -48,11 +58,15 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@next/bundle-analyzer": "15.2.0",
     "@types/fs-extra": "11.0.4",
     "@types/node": "20.11.24",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
     "autoprefixer": "10.4.17",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "babel-plugin-transform-remove-console": "6.9.4",
+    "core-js": "3.36.0",
     "fs-extra": "11.3.0",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.1",
