--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
     "framer-motion": "12.7.4",
+    "fs-extra": "11.3.0",
     "lucide-react": "0.475.0",
     "next": "15.2.0",
     "next-themes": "0.4.6",
